@@ -31,4 +31,16 @@ export(stochSearch)
 importFrom(splines,bs)
 importFrom(splines,spline.des)
 importFrom(statmod,gauss.quad)
-useDynLib(hypergsplines,cpp_hyp2f1,cpp_calculateModel,cpp_exhaustive,cpp_exhaustive2,cpp_stochSearch,cpp_glmExhaustive,cpp_glmGetSamples,cpp_linApproxDens,cpp_glmStochSearch,cpp_log_hyp2f1_laplace,cpp_logMargLik,cpp_glmLogMargLik,cpp_aggregateModelsTable)
+useDynLib(hypergsplines,cpp_aggregateModelsTable)
+useDynLib(hypergsplines,cpp_calculateModel)
+useDynLib(hypergsplines,cpp_exhaustive)
+useDynLib(hypergsplines,cpp_exhaustive2)
+useDynLib(hypergsplines,cpp_glmExhaustive)
+useDynLib(hypergsplines,cpp_glmGetSamples)
+useDynLib(hypergsplines,cpp_glmLogMargLik)
+useDynLib(hypergsplines,cpp_glmStochSearch)
+useDynLib(hypergsplines,cpp_hyp2f1)
+useDynLib(hypergsplines,cpp_linApproxDens)
+useDynLib(hypergsplines,cpp_log_hyp2f1_laplace)
+useDynLib(hypergsplines,cpp_logMargLik)
+useDynLib(hypergsplines,cpp_stochSearch)
